<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.giantturtle.badenumbersquiz.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_yourself"
        android:id="@+id/startPrepareActivityButton"
        android:layout_marginBottom="10dp"

        android:layout_above="@+id/goToRankingListButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_apps"
        android:id="@+id/goToMyPlaystoreButton"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"

        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_list"
        android:id="@+id/goToRankingListButton"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/goToMyPlaystoreButton"
        android:layout_centerHorizontal="true" />

    <Button

        style="@style/MainScreenButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:layout_marginBottom="10dp"
        android:id="@+id/quizFragmentActivityButton"
        android:layout_above="@+id/startPrepareActivityButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
